--- a/env.example.env
+++ b/env.example.env
@@ -1,12 +1,12 @@
 PORT=5000
 
-DB_PORT=3306
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=alvaro
-DB_NAME=api_auth
+DB_PORT=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-JWT_SECRET=1b251ee8-06ab-499c-87a0-456d3652fd50
+JWT_SECRET=
 EXPIRY_TOKEN=60
 
 ALLOWED_ORIGIN=http://localhost:3000
